--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <title>Github Profile</title>
   </head>
   <body>
+    <form class="user-form" id="form">
+      <input type="text" id="search" placeholder="Search a Github User" />
+    </form>
+
+    <main id="main">
+      <div class="card">
+        <div>
+          <img
+            src="https://randomuser.me/api/portraits/men/30.jpg"
+            alt=""
+            class="avatar"
+          />
+        </div>
+        <div class="user-info">
+          <h2>Johndoe</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus,
+            numquam?
+          </p>
+
+          <ul>
+            <li>300 <strong>Followers</strong></li>
+            <li>100 <strong>Following</strong></li>
+            <li>30 <strong>Repos</strong></li>
+          </ul>
+
+          <div id="repos">
+            <a href="#" class="repos">Repo 1</a>
+            <a href="#" class="repos">Repo 2</a>
+            <a href="#" class="repos">Repo 3</a>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
